--- a/buyer.html
+++ b/buyer.html
@@ -68,6 +68,7 @@
                          <option value="m">Meru</option>
                          <option value="l">Machakos</option>
                          <option value="xl">Nairobi</option>
+                         <option value="xl">Nairobi</option>
                      </select>
                  </div>
              </div>
@@ -217,31 +218,31 @@
           <div class="panel-body">
             <div class="col-md-7 nogap">
               <a href="#" class="thumbnail">
-                 <img src="img/onion1.jpg" alt="">
+                 <img src="img/onion2.jpg" alt="">
               </a>
             </div>
             <div class="col-md-5 nogap">
 
                   <p>Farmer: Vaite Murume, Meru</p>
                   <p>Cell: 0734556676</p>
-                  <p>Price: Ksh. 20 per Kg</p>
+                  <p>Price: Ksh. 40 per Kg</p>
             </div>
           </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="panel panel-primary">
-          <div class="panel-heading">Onion</div>
+          <div class="panel-heading">Maize</div>
           <div class="panel-body">
             <div class="col-md-7 nogap">
               <a href="#" class="thumbnail">
-                 <img src="img/onion1.jpg" alt="">
+                 <img src="img/maize2.jpg" alt="">
               </a>
             </div>
             <div class="col-md-5 nogap">
 
-                  <p>Farmer: Vaite Murume, Meru</p>
-                  <p>Cell: 0734556676</p>
+                  <p>Farmer: Chris aden, Nakuru</p>
+                  <p>Cell: 0734556670</p>
                   <p>Price: Ksh. 20 per Kg</p>
             </div>
           </div>
@@ -251,18 +252,18 @@
   <div class="row">
     <div class="col-md-4">
       <div class="panel panel-primary">
-        <div class="panel-heading">Banana</div>
+        <div class="panel-heading">Potato</div>
         <div class="panel-body">
           <div class="col-md-7 nogap">
             <a href="#" class="thumbnail">
-               <img src="img/banana1.jpg" alt="">
+               <img src="img/potato3.jpg" alt="">
             </a>
           </div>
           <div class="col-md-5 nogap">
 
-                <p>Farmer: Mulu Kadan, Machakos</p>
+                <p>Farmer: Mully Farm, Machakos</p>
                 <p>Cell: 0713919051</p>
-                <p>Price: Ksh. 2 per pc</p>
+                <p>Price: Ksh. 40 per Kg</p>
           </div>
         </div>
       </div>
@@ -270,16 +271,16 @@
 
     <div class="col-md-4">
       <div class="panel panel-primary">
-        <div class="panel-heading">Onion</div>
+        <div class="panel-heading">Maize</div>
         <div class="panel-body">
           <div class="col-md-7 nogap">
             <a href="#" class="thumbnail">
-               <img src="img/onion1.jpg" alt="">
+               <img src="img/maize3.jpg" alt="">
             </a>
           </div>
           <div class="col-md-5 nogap">
 
-                <p>Farmer: Vaite Murume, Meru</p>
+                <p>Farmer: Ones Maua, Meru</p>
                 <p>Cell: 0734556676</p>
                 <p>Price: Ksh. 20 per Kg</p>
           </div>
@@ -288,16 +289,16 @@
     </div>
     <div class="col-md-4">
       <div class="panel panel-primary">
-        <div class="panel-heading">Onion</div>
+        <div class="panel-heading">Sukuma Wiki</div>
         <div class="panel-body">
           <div class="col-md-7 nogap">
             <a href="#" class="thumbnail">
-               <img src="img/onion1.jpg" alt="">
+               <img src="img/sukuma1.jpg" alt="">
             </a>
           </div>
           <div class="col-md-5 nogap">
 
-                <p>Farmer: Vaite Murume, Meru</p>
+                <p>Farmer: Agnes Mwari, Meru</p>
                 <p>Cell: 0734556676</p>
                 <p>Price: Ksh. 20 per Kg</p>
           </div>
@@ -312,14 +313,14 @@
       <div class="panel-body">
         <div class="col-md-7 nogap">
           <a href="#" class="thumbnail">
-             <img src="img/banana1.jpg" alt="">
+             <img src="img/banana2.jpg" alt="">
           </a>
         </div>
         <div class="col-md-5 nogap">
 
-              <p>Farmer: Mulu Kadan, Machakos</p>
+              <p>Farmer: Moses Mukiri, Nakuru</p>
               <p>Cell: 0713919051</p>
-              <p>Price: Ksh. 2 per pc</p>
+              <p>Price: Ksh. 35 per Kg</p>
         </div>
       </div>
     </div>
@@ -327,36 +328,36 @@
 
   <div class="col-md-4">
     <div class="panel panel-primary">
-      <div class="panel-heading">Onion</div>
+      <div class="panel-heading">Sukuma Wiki</div>
       <div class="panel-body">
         <div class="col-md-7 nogap">
           <a href="#" class="thumbnail">
-             <img src="img/onion1.jpg" alt="">
+             <img src="img/sukuma2.jpg" alt="">
           </a>
         </div>
         <div class="col-md-5 nogap">
 
-              <p>Farmer: Vaite Murume, Meru</p>
-              <p>Cell: 0734556676</p>
-              <p>Price: Ksh. 20 per Kg</p>
+              <p>Farmer: Kelvin Misiori, Kisii</p>
+              <p>Cell: 0734556563</p>
+              <p>Price: Ksh. 25 per Kg</p>
         </div>
       </div>
     </div>
   </div>
   <div class="col-md-4">
     <div class="panel panel-primary">
-      <div class="panel-heading">Onion</div>
+      <div class="panel-heading">Water Melon</div>
       <div class="panel-body">
         <div class="col-md-7 nogap">
           <a href="#" class="thumbnail">
-             <img src="img/onion1.jpg" alt="">
+             <img src="img/watermelon.jpg" alt="">
           </a>
         </div>
         <div class="col-md-5 nogap">
 
               <p>Farmer: Vaite Murume, Meru</p>
               <p>Cell: 0734556676</p>
-              <p>Price: Ksh. 20 per Kg</p>
+              <p>Price: Ksh. 30 per Kg</p>
         </div>
       </div>
     </div>
