modifying hover effect

--- a/buyer.html
+++ b/buyer.html
@@ -307,27 +307,42 @@
     </div>
 </div>
 <div class="row">
-  <div class="col-md-4">
-    <div class="panel panel-primary">
+  <div class="col-md-3">
+    <div class="panel panel-primary nogap">
       <div class="panel-heading">Banana</div>
       <div class="panel-body">
-        <div class="col-md-7 nogap">
-          <a href="#" class="thumbnail">
-             <img src="img/banana2.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-md-5 nogap">
-
-              <p>Farmer: Moses Mukiri, Nakuru</p>
-              <p>Cell: 0713919051</p>
-              <p>Price: Ksh. 35 per Kg</p>
-        </div>
+        <ul class="item">
+            <li>
+                <figure>
+                    <img src="img/banana2.jpg" alt=""/>
+                    <figcaption>
+                        <h2>BANANA!</h2>
+                        <p>Farmer: Moses Mukiri, Nakuru</p>
+                        <p>Cell: 0713919051</p>
+                        <p>Price: Ksh. 35 per Kg</p>
+                    </figcaption>
+                </figure>
+            </li>
+        </ul>
       </div>
     </div>
+    <!-- <ul class="item">
+        <li>
+            <figure>
+                <img src="img/banana2.jpg" alt=""/>
+                <figcaption>
+                    <h2>bANANA!</h2>
+                    <p>Farmer: Moses Mukiri, Nakuru</p>
+                    <p>Cell: 0713919051</p>
+                    <p>Price: Ksh. 35 per Kg</p>
+                </figcaption>
+            </figure>
+        </li>
+    </ul> -->
   </div>
 
-  <div class="col-md-4">
-    <div class="panel panel-primary">
+  <div class="col-md-3">
+    <!-- <div class="panel panel-primary">
       <div class="panel-heading">Sukuma Wiki</div>
       <div class="panel-body">
         <div class="col-md-7 nogap">
@@ -342,10 +357,24 @@
               <p>Price: Ksh. 25 per Kg</p>
         </div>
       </div>
-    </div>
-  </div>
+
+  </div> -->
+  <ul class="item">
+      <li>
+          <figure>
+              <img src="img/sukuma2.jpg" alt=""/>
+              <figcaption>
+                  <h2>SUKUMA WIKI!</h2>
+                  <p>Farmer: Kelvin Misiori, Kisii</p>
+                  <p>Cell: 0734556563</p>
+                  <p>Price: Ksh. 25 per Kg</p>
+              </figcaption>
+          </figure>
+      </li>
+  </ul>
+</div>
   <div class="col-md-4">
-    <div class="panel panel-primary">
+    <!-- <div class="panel panel-primary">
       <div class="panel-heading">Water Melon</div>
       <div class="panel-body">
         <div class="col-md-7 nogap">
@@ -360,7 +389,20 @@
               <p>Price: Ksh. 30 per Kg</p>
         </div>
       </div>
-    </div>
+    </div> -->
+    <ul class="item">
+      <li>
+          <figure>
+              <img src="img/watermelon.jpg" alt=""/>
+              <figcaption>
+                  <h2>WATER MELON!</h2>
+                  <p>Farmer: Vaite Murume, Meru</p>
+                  <p>Cell: 0734556676</p>
+                  <p>Price: Ksh. 30 per Kg</p>
+              </figcaption>
+          </figure>
+      </li>
+  </ul>
   </div>
 </div>
     </div>
