done hover effect

--- a/buyer.html
+++ b/buyer.html
@@ -79,229 +79,253 @@
       </nav>
       <div class="market">
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="panel panel-primary">
               <div class="panel-heading">Banana</div>
               <div class="panel-body">
-                <div class="col-md-7 nogap">
-                  <a href="#" class="thumbnail">
-                     <img src="img/banana1.jpg" alt="">
-                  </a>
-                </div>
-                <div class="col-md-5 nogap">
-
-                      <p>Farmer: Mulu Kadan, Machakos</p>
-                      <p>Cell: 0713919051</p>
-                      <p>Price: Ksh. 2 per pc</p>
-                </div>
+                <ul class="item">
+                    <li>
+                        <figure>
+                            <img src="img/banana1.jpg" alt=""/>
+                            <figcaption>
+                                <h2>BANANA!</h2>
+                                <p>Farmer: Mulu Kadan, Machakos</p>
+                                <p>Cell: 0713919051</p>
+                                <p>Price: Ksh. 2 /pc</p>
+                            </figcaption>
+                        </figure>
+                    </li>
+                </ul>
               </div>
             </div>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="panel panel-primary">
               <div class="panel-heading">Onion</div>
               <div class="panel-body">
-                <div class="col-md-7 nogap">
-                  <a href="#" class="thumbnail">
-                     <img src="img/onion1.jpg" alt="">
-                  </a>
-                </div>
-                <div class="col-md-5 nogap">
-
-                      <p>Farmer: Vaite Murume, Meru</p>
-                      <p>Cell: 0734556676</p>
-                      <p>Price: Ksh. 20 per Kg</p>
-                </div>
+                <ul class="item">
+                    <li>
+                        <figure>
+                            <img src="img/onion1.jpg" alt=""/>
+                            <figcaption>
+                                <h2>Red Bulb Onion!</h2>
+                                <p>Farmer: Vaite Murume, Meru</p>
+                                <p>Cell: 0734556676</p>
+                                <p>Price: Ksh. 20 /Kg</p>
+                            </figcaption>
+                        </figure>
+                    </li>
+                </ul>
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="panel panel-primary">
               <div class="panel-heading">Potatoes</div>
               <div class="panel-body">
-                <div class="col-md-7 nogap">
-                  <a href="#" class="thumbnail">
-                     <img src="img/potato1.jpg" alt="">
-                  </a>
-                </div>
-                <div class="col-md-5 nogap">
-
-                      <p>Farmer: Kemunto Nyamweya, Kisii</p>
-                      <p>Cell: 0764534690</p>
-                      <p>Price: Ksh. 50 per Kg</p>
-                </div>
+                <ul class="item">
+                    <li>
+                        <figure>
+                            <img src="img/potato1.jpg" alt=""/>
+                            <figcaption>
+                                <h2>Potatoes!</h2>
+                                <p>Farmer: Kemunto Nyamweya, Kisii</p>
+                                <p>Cell: 0764534690</p>
+                                <p>Price: Ksh. 50 /Kg</p>
+                            </figcaption>
+                        </figure>
+                    </li>
+                </ul>
               </div>
             </div>
           </div>
       </div>
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-3">
           <div class="panel panel-primary">
             <div class="panel-heading">Beans</div>
             <div class="panel-body">
-              <div class="col-md-7 nogap">
-                <a href="#" class="thumbnail">
-                   <img src="img/beans1.jpg" alt="">
-                </a>
-              </div>
-              <div class="col-md-5 nogap">
-
-                    <p>Farmer: Annita Mui, Nairobi</p>
-                    <p>Cell: 0713346643</p>
-                    <p>Price: Ksh. 30 per Kg</p>
-              </div>
+            <ul class="item">
+                  <li>
+                      <figure>
+                          <img src="img/beans1.jpg" alt=""/>
+                          <figcaption>
+                              <h2>Beans!</h2>
+                              <p>Farmer: Annita Mui, Nairobi</p>
+                              <p>Cell: 0713346643</p>
+                              <p>Price: Ksh. 30 /Kg</p>
+                          </figcaption>
+                      </figure>
+                  </li>
+              </ul>
             </div>
           </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-3">
           <div class="panel panel-primary">
             <div class="panel-heading">Beans</div>
             <div class="panel-body">
-              <div class="col-md-7 nogap">
-                <a href="#" class="thumbnail">
-                   <img src="img/beans2.jpg" alt="">
-                </a>
-              </div>
-              <div class="col-md-5 nogap">
-
-                    <p>Farmer: Nkirote Mry, Meru</p>
-                    <p>Cell: 0734445334</p>
-                    <p>Price: Ksh. 40 per Kg</p>
-              </div>
+              <ul class="item">
+                    <li>
+                        <figure>
+                            <img src="img/beans2.jpg" alt=""/>
+                            <figcaption>
+                                <h2>Beans!</h2>
+                                <p>Farmer: Nkirote Mry, Meru</p>
+                                <p>Cell: 0734445334</p>
+                                <p>Price: Ksh. 40 /Kg</p>
+                            </figcaption>
+                        </figure>
+                    </li>
+                </ul>
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
           <div class="panel panel-primary">
             <div class="panel-heading">Maize</div>
             <div class="panel-body">
-              <div class="col-md-7 nogap">
-                <a href="#" class="thumbnail">
-                   <img src="img/maize1.jpg" alt="">
-                </a>
-              </div>
-              <div class="col-md-5 nogap">
-
-                    <p>Farmer: Betty mukrumen, Nairobi</p>
-                    <p>Cell: 073454456</p>
-                    <p>Price: Ksh. 30 per Kg</p>
-              </div>
+              <ul class="item">
+                    <li>
+                        <figure>
+                            <img src="img/maize1.jpg" alt=""/>
+                            <figcaption>
+                                <h2>Maize!</h2>
+                                <p>Farmer: Betty muken, Nairobi</p>
+                                <p>Cell: 073454456</p>
+                                <p>Price: Ksh. 30 /Kg</p>
+                            </figcaption>
+                        </figure>
+                    </li>
+                </ul>
             </div>
           </div>
         </div>
     </div>
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-3">
         <div class="panel panel-primary">
           <div class="panel-heading">Potatoes</div>
           <div class="panel-body">
-            <div class="col-md-7 nogap">
-              <a href="#" class="thumbnail">
-                 <img src="img/potato2.jpg" alt="">
-              </a>
-            </div>
-            <div class="col-md-5 nogap">
-
-                  <p>Farmer: Mike Muli, Machakos</p>
-                  <p>Cell: 0713914566</p>
-                  <p>Price: Ksh. 40 per Kg</p>
-            </div>
+            <ul class="item">
+                  <li>
+                      <figure>
+                          <img src="img/potato2.jpg" alt=""/>
+                          <figcaption>
+                              <h2>Potatoes!</h2>
+                              <p>Farmer: Mike Muli, Machakos</p>
+                              <p>Cell: 0713914566</p>
+                              <p>Price: Ksh. 40 /Kg</p>
+                          </figcaption>
+                      </figure>
+                  </li>
+              </ul>
           </div>
         </div>
       </div>
 
-      <div class="col-md-4">
+      <div class="col-md-3">
         <div class="panel panel-primary">
           <div class="panel-heading">Onion</div>
           <div class="panel-body">
-            <div class="col-md-7 nogap">
-              <a href="#" class="thumbnail">
-                 <img src="img/onion2.jpg" alt="">
-              </a>
-            </div>
-            <div class="col-md-5 nogap">
-
-                  <p>Farmer: Vaite Murume, Meru</p>
-                  <p>Cell: 0734556676</p>
-                  <p>Price: Ksh. 40 per Kg</p>
-            </div>
+            <ul class="item">
+                  <li>
+                      <figure>
+                          <img src="img/onion2.jpg" alt=""/>
+                          <figcaption>
+                              <h2>Onion!</h2>
+                              <p>Farmer: Vaite Murume, Meru</p>
+                              <p>Cell: 0734556676</p>
+                              <p>Price: Ksh. 40 /Kg</p>
+                          </figcaption>
+                      </figure>
+                  </li>
+              </ul>
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
         <div class="panel panel-primary">
           <div class="panel-heading">Maize</div>
           <div class="panel-body">
-            <div class="col-md-7 nogap">
-              <a href="#" class="thumbnail">
-                 <img src="img/maize2.jpg" alt="">
-              </a>
-            </div>
-            <div class="col-md-5 nogap">
-
-                  <p>Farmer: Chris aden, Nakuru</p>
-                  <p>Cell: 0734556670</p>
-                  <p>Price: Ksh. 20 per Kg</p>
-            </div>
+            <ul class="item">
+                  <li>
+                      <figure>
+                          <img src="img/maize2.jpg" alt=""/>
+                          <figcaption>
+                              <h2>Maize!</h2>
+                              <p>Farmer: Chris aden, Nakuru</p>
+                              <p>Cell: 0734556670</p>
+                              <p>Price: Ksh. 20 /Kg</p>
+                          </figcaption>
+                      </figure>
+                  </li>
+              </ul>
           </div>
         </div>
       </div>
   </div>
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-3">
       <div class="panel panel-primary">
         <div class="panel-heading">Potato</div>
         <div class="panel-body">
-          <div class="col-md-7 nogap">
-            <a href="#" class="thumbnail">
-               <img src="img/potato3.jpg" alt="">
-            </a>
-          </div>
-          <div class="col-md-5 nogap">
-
-                <p>Farmer: Mully Farm, Machakos</p>
-                <p>Cell: 0713919051</p>
-                <p>Price: Ksh. 40 per Kg</p>
-          </div>
+          <ul class="item">
+                <li>
+                    <figure>
+                        <img src="img/potato3.jpg" alt=""/>
+                        <figcaption>
+                            <h2>Potatoes!</h2>
+                            <p>Farmer: Mully Farm, Machakos</p>
+                            <p>Cell: 0713919051</p>
+                            <p>Price: Ksh. 40 /Kg</p>
+                        </figcaption>
+                    </figure>
+                </li>
+            </ul>
         </div>
       </div>
     </div>
 
-    <div class="col-md-4">
+    <div class="col-md-3">
       <div class="panel panel-primary">
         <div class="panel-heading">Maize</div>
         <div class="panel-body">
-          <div class="col-md-7 nogap">
-            <a href="#" class="thumbnail">
-               <img src="img/maize3.jpg" alt="">
-            </a>
-          </div>
-          <div class="col-md-5 nogap">
-
-                <p>Farmer: Ones Maua, Meru</p>
-                <p>Cell: 0734556676</p>
-                <p>Price: Ksh. 20 per Kg</p>
-          </div>
+            <ul class="item">
+                <li>
+                    <figure>
+                        <img src="img/maize3.jpg" alt=""/>
+                        <figcaption>
+                            <h2>Maize!</h2>
+                            <p>Farmer: Ones Maua, Meru</p>
+                            <p>Cell: 0734556676</p>
+                            <p>Price: Ksh. 20 /Kg</p>
+                        </figcaption>
+                    </figure>
+                </li>
+            </ul>
         </div>
       </div>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-3">
       <div class="panel panel-primary">
         <div class="panel-heading">Sukuma Wiki</div>
         <div class="panel-body">
-          <div class="col-md-7 nogap">
-            <a href="#" class="thumbnail">
-               <img src="img/sukuma1.jpg" alt="">
-            </a>
-          </div>
-          <div class="col-md-5 nogap">
-
-                <p>Farmer: Agnes Mwari, Meru</p>
-                <p>Cell: 0734556676</p>
-                <p>Price: Ksh. 20 per Kg</p>
-          </div>
+         <ul class="item">
+                <li>
+                    <figure>
+                        <img src="img/sukuma1.jpg" alt=""/>
+                        <figcaption>
+                            <h2>Sukuma Wiki!</h2>
+                            <p>Farmer: Agnes Mwari, Meru</p>
+                            <p>Cell: 0734556676</p>
+                            <p>Price: Ksh. 20 /Kg</p>
+                        </figcaption>
+                    </figure>
+                </li>
+            </ul>
         </div>
       </div>
     </div>
@@ -319,90 +343,54 @@
                         <h2>BANANA!</h2>
                         <p>Farmer: Moses Mukiri, Nakuru</p>
                         <p>Cell: 0713919051</p>
-                        <p>Price: Ksh. 35 per Kg</p>
+                        <p>Price: Ksh. 35 /Kg</p>
                     </figcaption>
                 </figure>
             </li>
         </ul>
       </div>
     </div>
-    <!-- <ul class="item">
-        <li>
-            <figure>
-                <img src="img/banana2.jpg" alt=""/>
-                <figcaption>
-                    <h2>bANANA!</h2>
-                    <p>Farmer: Moses Mukiri, Nakuru</p>
-                    <p>Cell: 0713919051</p>
-                    <p>Price: Ksh. 35 per Kg</p>
-                </figcaption>
-            </figure>
-        </li>
-    </ul> -->
   </div>
 
   <div class="col-md-3">
-    <!-- <div class="panel panel-primary">
-      <div class="panel-heading">Sukuma Wiki</div>
+    <div class="panel panel-primary nogap">
+      <div class="panel-heading">Sukuma</div>
       <div class="panel-body">
-        <div class="col-md-7 nogap">
-          <a href="#" class="thumbnail">
-             <img src="img/sukuma2.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-md-5 nogap">
-
-              <p>Farmer: Kelvin Misiori, Kisii</p>
-              <p>Cell: 0734556563</p>
-              <p>Price: Ksh. 25 per Kg</p>
-        </div>
+        <ul class="item">
+           <li>
+               <figure>
+                   <img src="img/sukuma2.jpg" alt=""/>
+                   <figcaption>
+                       <h2>SUKUMA WIKI!</h2>
+                       <p>Farmer: Kelvin Misiori, Kisii</p>
+                       <p>Cell: 0734556563</p>
+                       <p>Price: Ksh. 25 /Kg</p>
+                   </figcaption>
+               </figure>
+           </li>
+       </ul>
       </div>
-
-  </div> -->
-  <ul class="item">
-      <li>
-          <figure>
-              <img src="img/sukuma2.jpg" alt=""/>
-              <figcaption>
-                  <h2>SUKUMA WIKI!</h2>
-                  <p>Farmer: Kelvin Misiori, Kisii</p>
-                  <p>Cell: 0734556563</p>
-                  <p>Price: Ksh. 25 per Kg</p>
-              </figcaption>
-          </figure>
-      </li>
-  </ul>
+    </div>
 </div>
-  <div class="col-md-4">
-    <!-- <div class="panel panel-primary">
-      <div class="panel-heading">Water Melon</div>
-      <div class="panel-body">
-        <div class="col-md-7 nogap">
-          <a href="#" class="thumbnail">
-             <img src="img/watermelon.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-md-5 nogap">
-
-              <p>Farmer: Vaite Murume, Meru</p>
-              <p>Cell: 0734556676</p>
-              <p>Price: Ksh. 30 per Kg</p>
-        </div>
-      </div>
-    </div> -->
-    <ul class="item">
-      <li>
-          <figure>
-              <img src="img/watermelon.jpg" alt=""/>
-              <figcaption>
-                  <h2>WATER MELON!</h2>
-                  <p>Farmer: Vaite Murume, Meru</p>
-                  <p>Cell: 0734556676</p>
-                  <p>Price: Ksh. 30 per Kg</p>
-              </figcaption>
-          </figure>
-      </li>
-  </ul>
+  <div class="col-md-3">
+    <div class="panel panel-primary nogap">
+    <div class="panel-heading">Water Melon</div>
+    <div class="panel-body">
+      <ul class="item">
+        <li>
+            <figure>
+                <img src="img/watermelon1.jpg" alt=""/>
+                <figcaption>
+                    <h2>WATER MELON!</h2>
+                    <p>Farmer: Vaite Murume, Meru</p>
+                    <p>Cell: 0734556676</p>
+                    <p>Price: Ksh. 30 /Kg</p>
+                </figcaption>
+            </figure>
+        </li>
+    </ul>
+    </div>
+  </div>
   </div>
 </div>
     </div>
