--- a/buyer.html
+++ b/buyer.html
@@ -140,6 +140,26 @@
               </div>
             </div>
           </div>
+          <div class="col-md-3">
+            <div class="panel panel-primary">
+              <div class="panel-heading">Mango</div>
+              <div class="panel-body">
+                <ul class="item">
+                      <li>
+                          <figure>
+                              <img src="img/mango.jpg" alt=""/>
+                              <figcaption>
+                                  <h2>Mango!</h2>
+                                  <p>Farmer: Ann Mita, Kitui</p>
+                                  <p>Cell: 073454456</p>
+                                  <p>Price: Ksh. 30 /Kg</p>
+                              </figcaption>
+                          </figure>
+                      </li>
+                  </ul>
+              </div>
+            </div>
+          </div>
       </div>
       <div class="row">
         <div class="col-md-3">
@@ -195,6 +215,26 @@
                                 <h2>Maize!</h2>
                                 <p>Farmer: Betty muken, Nairobi</p>
                                 <p>Cell: 073454456</p>
+                                <p>Price: Ksh. 30 /Kg</p>
+                            </figcaption>
+                        </figure>
+                    </li>
+                </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="panel panel-primary">
+            <div class="panel-heading">Cabbage</div>
+            <div class="panel-body">
+              <ul class="item">
+                    <li>
+                        <figure>
+                            <img src="img/cabbage.jpg" alt=""/>
+                            <figcaption>
+                                <h2>Cabbage!</h2>
+                                <p>Farmer: Ones Kamau, Nakuru</p>
+                                <p>Cell: 073454434</p>
                                 <p>Price: Ksh. 30 /Kg</p>
                             </figcaption>
                         </figure>
@@ -266,6 +306,26 @@
           </div>
         </div>
       </div>
+      <div class="col-md-3">
+        <div class="panel panel-primary">
+          <div class="panel-heading">Pawpaw</div>
+          <div class="panel-body">
+            <ul class="item">
+                  <li>
+                      <figure>
+                          <img src="img/pawpaw.jpg" alt=""/>
+                          <figcaption>
+                              <h2>Pawpaw!</h2>
+                              <p>Farmer: Jack Mutinda, Machakos</p>
+                              <p>Cell: 073454411</p>
+                              <p>Price: Ksh. 70 /Kg</p>
+                          </figcaption>
+                      </figure>
+                  </li>
+              </ul>
+          </div>
+        </div>
+      </div>
   </div>
   <div class="row">
     <div class="col-md-3">
@@ -322,6 +382,26 @@
                             <p>Farmer: Agnes Mwari, Meru</p>
                             <p>Cell: 0734556676</p>
                             <p>Price: Ksh. 20 /Kg</p>
+                        </figcaption>
+                    </figure>
+                </li>
+            </ul>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="panel panel-primary">
+        <div class="panel-heading">Tomatoes</div>
+        <div class="panel-body">
+          <ul class="item">
+                <li>
+                    <figure>
+                        <img src="img/tomato.jpg" alt=""/>
+                        <figcaption>
+                            <h2>Tomatoes!</h2>
+                            <p>Farmer: Fred Moches, Kisii</p>
+                            <p>Cell: 073454454</p>
+                            <p>Price: Ksh. 60 /Kg</p>
                         </figcaption>
                     </figure>
                 </li>
@@ -391,6 +471,26 @@
     </ul>
     </div>
   </div>
+  </div>
+  <div class="col-md-3">
+    <div class="panel panel-primary">
+      <div class="panel-heading">Pepper</div>
+      <div class="panel-body">
+        <ul class="item">
+              <li>
+                  <figure>
+                      <img src="img/pepper.jpg" alt=""/>
+                      <figcaption>
+                          <h2>Pepper!</h2>
+                          <p>Farmer: Carol Msii, Kitui</p>
+                          <p>Cell: 073454330</p>
+                          <p>Price: Ksh. 40 /Kg</p>
+                      </figcaption>
+                  </figure>
+              </li>
+          </ul>
+      </div>
+    </div>
   </div>
 </div>
     </div>
