--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 
   </head>
   <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+
+        </div>
+      </div>
+    </div>
 
   </body>
 </html>
