added farmers details

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
+          <img src="" alt="">
+          <p>Name :<span class="farmerName"></span></p>
+          <p>Contact :<span class="farmerContact"></span></p>
+          <p>Location :<span class="farmerLocation"></span></p>
 
         </div>
       </div>
