added modal class

--- a/index.html
+++ b/index.html
@@ -14,10 +14,26 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
+          <!-- Farmers details -->
           <img src="" alt="">
           <p>Name :<span class="farmerName"></span></p>
           <p>Contact :<span class="farmerContact"></span></p>
           <p>Location :<span class="farmerLocation"></span></p>
+          <!-- Add new product button -->
+          <button type="button" name="button" id="AddFarmer"></button>
+          <!-- Add new product form -->
+          <div class="receipt modal" id="myModal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <h1>Receipt</h1>
+              <p><span class="pdesc">Name </span>: <span class="name"></span></p>
+              <p><span class="pdesc">Gender</span> : <span class="gender"></span></p>
+              <p><span class="pdesc">Email</span> : <span class="email"></span></p>
+              <p><span class="pdesc">Address</span> : <span class="address"></span></p>
+              <p><span class="pdesc">Date of Purchase</span> : <span class="purchase"></span></p>
+              <p><span class="pdesc">Products</span> : <span class="fruits"></span></p>
+        </div>
+      </div>
 
         </div>
       </div>
