added produce form

--- a/index.html
+++ b/index.html
@@ -25,13 +25,22 @@
           <div class="receipt modal" id="myModal">
             <div class="modal-content">
               <span class="close">&times;</span>
-              <h1>Receipt</h1>
-              <p><span class="pdesc">Name </span>: <span class="name"></span></p>
-              <p><span class="pdesc">Gender</span> : <span class="gender"></span></p>
-              <p><span class="pdesc">Email</span> : <span class="email"></span></p>
-              <p><span class="pdesc">Address</span> : <span class="address"></span></p>
-              <p><span class="pdesc">Date of Purchase</span> : <span class="purchase"></span></p>
-              <p><span class="pdesc">Products</span> : <span class="fruits"></span></p>
+              <h1>Add Farm Produce</h1>
+              <form class="" action="index.html" method="post">
+                <div class="form-group">
+                  <label for="farmProduct">Farm Product :</label>
+                  <input type="text" class="form-control" id="farmProduct" placeholder="Farm Produce">
+                </div>
+                <div class="form-group">
+                  <label for="price">Price :</label>
+                  <input type="number" class="form-control" id="price" placeholder="Price">
+                </div>
+                <div class="form-group">
+                  <label for="price">Quantity :</label>
+                  <input type="number" class="form-control" id="quantity" placeholder="Quantity">
+                </div>
+              </form>
+
         </div>
       </div>
 
