--- a/index.html
+++ b/index.html
@@ -48,6 +48,20 @@
 
         </div>
       </div>
+      <div class="">
+        <table class="table controls controls-row">
+          <thead>
+            <tr>
+        	    <th> Image </th>
+        		  <th> Product Name </th>
+              <th> Price </th>
+        		  <th> Quantity </th>
+        	</tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
+</div>
 
         </div>
       </div>
