--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="form-group">
                   <label for="image">Image :</label>
-                  <input type="number" class="form-control" id="image" placeholder="Select an Image">
+                  <input type="file" name="pic" accept="image/*">
                 </div>
                 <button type="submit" name="button">Add Product</button>
               </form>
