new readme file

--- a/farmer.html
+++ b/farmer.html
@@ -29,15 +29,15 @@
               <form id="marketplace">
                 <div class="form-group">
                   <label for="farmProduct">Farm Product :</label>
-                  <input type="text" class="form-control" id="farmProduct" placeholder="Farm Produce">
+                  <input type="text" class="form-control" id="farmProduct" placeholder="Farm Produce" required>
                 </div>
                 <div class="form-group">
                   <label for="price">Price :</label>
-                  <input type="number" class="form-control" id="price" placeholder="Price">
+                  <input type="number" class="form-control" id="price" placeholder="Price" required>
                 </div>
                 <div class="form-group">
                   <label for="quantity">Quantity :</label>
-                  <input type="number" class="form-control" id="quantity" placeholder="Quantity">
+                  <input type="number" class="form-control" id="quantity" placeholder="Quantity" required>
                 </div>
                 <div class="form-group">
                   <label for="image">Image :</label>
